# serializer version: 1
# name: test_bubble_workbook_writer_sheet_xml
  '''
  <worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships">
    <dimension ref="A1:C3"/>
    <sheetViews>
      <sheetView tabSelected="1" workbookViewId="0"/>
    </sheetViews>
    <sheetFormatPr defaultRowHeight="15"/>
    <sheetData>
      <row r="1" spans="1:3">
        <c r="B1" t="s">
          <v>0</v>
        </c>
        <c r="C1" t="s">
          <v>1</v>
        </c>
      </row>
      <row r="2" spans="1:3">
        <c r="A2" s="1">
          <v>1.1</v>
        </c>
        <c r="B2" s="1">
          <v>2.2</v>
        </c>
        <c r="C2" s="1">
          <v>10</v>
        </c>
      </row>
      <row r="3" spans="1:3">
        <c r="A3" s="1">
          <v>3.3</v>
        </c>
        <c r="B3" s="1">
          <v>4.4</v>
        </c>
        <c r="C3" s="1">
          <v>20</v>
        </c>
      </row>
    </sheetData>
    <pageMargins left="0.7" right="0.7" top="0.75" bottom="0.75" header="0.3" footer="0.3"/>
  </worksheet>
  
  '''
# ---
# name: test_category_workbook_writer_sheet_xml
  '''
  <worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships">
    <dimension ref="A1:B3"/>
    <sheetViews>
      <sheetView tabSelected="1" workbookViewId="0"/>
    </sheetViews>
    <sheetFormatPr defaultRowHeight="15"/>
    <cols>
      <col min="1" max="1" width="10.7109375" customWidth="1"/>
    </cols>
    <sheetData>
      <row r="1" spans="1:2">
        <c r="B1" t="s">
          <v>2</v>
        </c>
      </row>
      <row r="2" spans="1:2">
        <c r="A2" s="1" t="s">
          <v>0</v>
        </c>
        <c r="B2" s="1">
          <v>1.1</v>
        </c>
      </row>
      <row r="3" spans="1:2">
        <c r="A3" s="1" t="s">
          <v>1</v>
        </c>
        <c r="B3" s="1">
          <v>2.2</v>
        </c>
      </row>
    </sheetData>
    <pageMargins left="0.7" right="0.7" top="0.75" bottom="0.75" header="0.3" footer="0.3"/>
  </worksheet>
  
  '''
# ---
# name: test_xy_workbook_writer_sheet_xml
  '''
  <worksheet xmlns="http://schemas.openxmlformats.org/spreadsheetml/2006/main" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships">
    <dimension ref="A1:B3"/>
    <sheetViews>
      <sheetView tabSelected="1" workbookViewId="0"/>
    </sheetViews>
    <sheetFormatPr defaultRowHeight="15"/>
    <sheetData>
      <row r="1" spans="1:2">
        <c r="B1" t="s">
          <v>0</v>
        </c>
      </row>
      <row r="2" spans="1:2">
        <c r="A2" s="1">
          <v>1.1</v>
        </c>
        <c r="B2" s="1">
          <v>2.2</v>
        </c>
      </row>
      <row r="3" spans="1:2">
        <c r="A3" s="1">
          <v>3.3</v>
        </c>
        <c r="B3" s="1">
          <v>4.4</v>
        </c>
      </row>
    </sheetData>
    <pageMargins left="0.7" right="0.7" top="0.75" bottom="0.75" header="0.3" footer="0.3"/>
  </worksheet>
  
  '''
# ---
